[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "control_cluster_utils"
version = "0.1.0"
description = ""
authors = [{name = "AndrePatri", email = "andreapatrizi1b6e6@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
